# weather_information_server

./: Cargo.toml  README.md  server_conf.sh
src/: config.rs  error.rs  image_buffer.rs  lib.rs  main.rs  page_scraper.rs  scrap_manager.rs  server_state.rs
src/page_scraper_cli/: main.rs
src/routers/: mod.rs  weather_information_image.rs
