[package]
name = "weather_information_server"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "weather_information"
path = "src/lib.rs"

[[bin]]
name = "weather_information_server"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.18", features = ["headers", "multipart"]}
axum-client-ip = { version = "0.4.1" }
axum-extra = { version = "0.8.0" }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100" }
async-trait = { version = "0.1.71"}
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8" }
crossbeam-queue = { version = "0.3.8" }
